# botilleria_workspace

./: .env.production.example  .gitignore  .pre-commit-config.yaml  COMMUNITY_SENTIMENT_NVIDIA_FREE_ENDPOINTS.md  DEPLOY.md  Dockerfile.nginx  FODA_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INVESTIGACION_NVIDIA_FREE_MODELS_PYTHON.md  NVIDIA_FREE_ENDPOINT_INVESTIGATION.md  RECOMMENDED_NVIDIA_LLM_MODELS.md  RUNBOOK.md  dd.sh  debug_imports.py  deploy.sh  docker-compose.botilleria.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  du.sh  dw.sh  init-letsencrypt.sh  nginx.conf  rollback.sh  setup-ssl.sh  setup_botilleria_docker.sh  up.sh
botilleria_core/: .dockerignore  .env.example  AGENTS.md  alembic.ini  keyboards.py  main.py  pyproject.toml
botilleria_core/agents/: constants.py  root_agent.py
botilleria_core/alembic_migrations/: env.py
botilleria_core/config/: context.py  database.py  settings.py
botilleria_core/controllers/: __init__.py  admin_controller.py  auth_controller.py  chat_controller.py  dependencies.py  health_controller.py  session_controller.py  tenant_config_controller.py  tenant_controller.py  tenant_kb_controller.py  tenant_portal_controller.py  tenant_products_controller.py
botilleria_core/exceptions/: __init__.py  llm_exceptions.py
botilleria_core/middleware/: __init__.py  security.py
botilleria_core/models/: __init__.py  cart_item.py  category.py  conversation.py  kb_category.py  message.py  tenant.py
botilleria_core/repositories/: category_repository.py  kb_category_repository.py  kb_repository.py  product_repository.py
(+55 files in other folders)
